ARROW-5682: [Python] raise error when trying to convert non-string dtype to string